# rightsizing-api-server

./: .gitignore  Dockerfile  Makefile  go.mod  go.sum  log  main.go
cmd/api-server/: main.go
cmd/api-server/app/: server.go
cmd/api-server/app/options/: options.go
configs/: redis-config.yaml
docs/: docs.go  swagger.json  swagger.yaml
install/: install.yaml  install_with_opensearch.yaml  redis.yaml  rightsizing.yaml  timescaledb.sql
internal/api/auth/: handler.go
internal/api/common/errors/: error.go
internal/api/common/query/: query.go
internal/api/common/resource/: clusterinfo.go  resourceusage.go
internal/api/common/rightsizing/: rightsizing.go
internal/api/common/table/: table.go
internal/api/pod/: domain.go  handler.go  query.go  repository.go  service.go
internal/api/vm/: domain.go  handler.go  query.go  repository.go  service.go
internal/cache/: cache.go
internal/database/: config.go  connection.go
internal/grpc/: client.go
internal/logger/: logger.go
internal/models/: common.go  pod.go  vm.go
internal/utils/: time.go
internal/worker/: worker.go
proto/: rightsizing.pb.go  rightsizing.proto
python/: .gitignore  analyze.py  pyproject.toml  requirements.txt  rightsizing_pb2.py  rightsizing_pb2_grpc.py  rightsizing_server.py  utils.py
